--- a/resources/stylesheet/sunny.qss
+++ b/resources/stylesheet/sunny.qss
@@ -949,22 +949,22 @@ get_in_touch_item[hover=true] #description-label {
 }
 
 /*********************************************
-*                  OVERLAY                   *
+*                  Overlay                   *
 *********************************************/
 
-overlay {
+Overlay {
     background : rgba(255, 255, 255, 128);
 }
 
 /*********************************************
-*              REMINDER OVERLAY              *
+*              REMINDER Overlay              *
 *********************************************/
 
-reminder_overlay {
+ReminderOverlay {
     background : rgb(0, 0, 0);
 }
 
-reminder_overlay * {
+ReminderOverlay * {
     font-family : "Iosevka";
     font-weight : 700;
     font-size   : 32px;
@@ -972,7 +972,7 @@ reminder_overlay * {
     background  : rgb(0, 0, 0);
 }
 
-reminder_overlay QPushButton {
+ReminderOverlay QPushButton {
     padding-left  : 20px;
     padding-right : 20px;
     border-style  : solid;
@@ -981,13 +981,13 @@ reminder_overlay QPushButton {
     border-radius : 0px;
 }
 
-reminder_overlay QPushButton:hover {
+ReminderOverlay QPushButton:hover {
     color        : #A9B7C6;
     background   : rgb(0, 0, 0);
     border-color : #A9B7C6;
 }
 
-reminder_overlay #image-label {
+ReminderOverlay #image-label {
     min-width     : 320px;
     min-height    : 320px;
     max-width     : 320px;
@@ -995,7 +995,7 @@ reminder_overlay #image-label {
     margin-bottom : 15px;
 }
 
-reminder_overlay #text-label {
+ReminderOverlay #text-label {
     margin-bottom : 15px;
 }
 
@@ -1011,7 +1011,7 @@ ContentWidget * {
 *         PLUGIN SCHEDULE WIDGET             *
 *********************************************/
 
-plugin_schedule_widget {
+PluginScheduleWidget {
     /* background : qlineargradient(spread:pad,
     x1         : 0,
     y1         : 0,
@@ -1028,63 +1028,63 @@ plugin_schedule_widget {
     stop       : 1 rgb(234, 234, 234));
 }
 
-plugin_schedule_widget #searchbar-container {
+PluginScheduleWidget #searchbar-container {
     background : transparent;
     min-height : 80px;
     max-height : 80px;
 }
 
-plugin_schedule_widget searchbar {
+PluginScheduleWidget searchbar {
     min-width : 400px;
     max-width : 400px;
     border    : 1px solid rgb(73, 74, 76);
 }
 
-plugin_schedule_widget #plugin-frame {
+PluginScheduleWidget #plugin-frame {
     min-width : 400px;
     max-width : 400px;
 }
 
-plugin_schedule_widget #description-frame {
+PluginScheduleWidget #description-frame {
     border : 1px solid #313D46;
 }
 
-plugin_schedule_widget #description-frame #header {
+PluginScheduleWidget #description-frame #header {
     background : #313D46;
 }
 
-plugin_schedule_widget #description-frame #left-spacer {
+PluginScheduleWidget #description-frame #left-spacer {
     background : #171E22;
 }
 
-plugin_schedule_widget #description-frame #label {
+PluginScheduleWidget #description-frame #label {
     background : #313D46;
 }
 
-plugin_schedule_widget #description-frame #right-spacer {
+PluginScheduleWidget #description-frame #right-spacer {
     background : #171E22;
 }
 
-plugin_schedule_widget #schedule-frame {
+PluginScheduleWidget #schedule-frame {
     /*min-width : 400px;
     max-width : 400px;*/
     margin-left : 0px;
     /*margin-right: 0px;*/
 }
 
-plugin_schedule_widget #plugin-frame #label {
+PluginScheduleWidget #plugin-frame #label {
     qproperty-text : "LOADED <font color='#A9B7C6'>PLUGINS</font>";
 }
 
-plugin_schedule_widget #description-frame #label {
+PluginScheduleWidget #description-frame #label {
     qproperty-text : "<font color='#171e22'>PLUGIN DESCRIPTION</font>";
 }
 
-plugin_schedule_widget #schedule-frame #label {
+PluginScheduleWidget #schedule-frame #label {
     qproperty-text : "SCHEDULED <font color='#A9B7C6'>PLUGINS</font>";
 }
 
-plugin_schedule_widget QPlainTextEdit {
+PluginScheduleWidget QPlainTextEdit {
     font-family    : "Iosevka";
     /*font-weight    : 400;*/
     font-size      : 15px;
@@ -1099,21 +1099,21 @@ plugin_schedule_widget QPlainTextEdit {
 *               LOADED PLUGINS               *
 *********************************************/
 
-loaded_plugins_widget {
+LoadedPluginsWidget {
     background : rgb(219, 219, 219);
 }
 
-loaded_plugins_widget #container {
+LoadedPluginsWidget #container {
     background : rgb(219, 219, 219);
 }
 
-loaded_plugins_widget #spacer {
+LoadedPluginsWidget #spacer {
     background : rgb(219, 219, 219);
     min-height : 14px;
     max-height : 14px;
 }
 
-loaded_plugin_item #name-label {
+LoadedPluginItem #name-label {
     background     : rgb(219, 219, 219);
     font-family    : "Iosevka";
     font-weight    : 400;
@@ -1125,7 +1125,7 @@ loaded_plugin_item #name-label {
     padding-right  : 10px;
 }
 
-loaded_plugin_item[hover=true] #name-label {
+LoadedPluginItem[hover=true] #name-label {
     background : rgb(79, 79, 79);
     color: white;
 }
@@ -1134,23 +1134,23 @@ loaded_plugin_item[hover=true] #name-label {
 *              SCHEDULED PLUGINS             *
 *********************************************/
 
-scheduled_plugins_widget {
+ScheduledPluginsWidget {
     background : rgb(219, 219, 219);
     min-width  : 400px;
     max-width  : 400px;
 }
 
-scheduled_plugins_widget #container {
+ScheduledPluginsWidget #container {
     background : rgb(219, 219, 219);
 }
 
-scheduled_plugins_widget #spacer {
+ScheduledPluginsWidget #spacer {
     background : rgb(219, 219, 219);
     min-height : 14px;
     max-height : 14px;
 }
 
-scheduled_plugin_item #name-label {
+ScheduledPluginItem #name-label {
     background     : rgb(219, 219, 219);
     font-family    : "Iosevka";
     font-weight    : 400;
@@ -1162,7 +1162,7 @@ scheduled_plugin_item #name-label {
     padding-right  : 10px;
 }
 
-scheduled_plugin_item[hover=true] #name-label {
+ScheduledPluginItem[hover=true] #name-label {
     background : rgb(99, 99, 99);
     color: white;
 }
@@ -1171,7 +1171,7 @@ scheduled_plugin_item[hover=true] #name-label {
 *            NO_SCHEDULED PLUGINS            *
 *********************************************/
 
-no_scheduled_plugins_widget {
+NoScheduledPluginsWidget {
     background           : rgb(219, 219, 219);
     qproperty-icon_path  : ":/icons/drop";
     qproperty-icon_style : "all->#3b3c3d";
@@ -1179,15 +1179,15 @@ no_scheduled_plugins_widget {
     max-width            : 400px;
 }
 
-no_scheduled_plugins_widget[drag_active=true] {
+NoScheduledPluginsWidget[drag_active=true] {
     qproperty-icon_style : "all->#000000";
 }
 
-no_scheduled_plugins_widget QLabel {
+NoScheduledPluginsWidget QLabel {
     background : rgb(219, 219, 219);
 }
 
-no_scheduled_plugins_widget #text-label {
+NoScheduledPluginsWidget #text-label {
     background    : rgb(219, 219, 219);
     font-family   : "Iosevka";
     font-weight   : 400;
@@ -1200,7 +1200,7 @@ no_scheduled_plugins_widget #text-label {
     margin-right  : 10px;
 }
 
-no_scheduled_plugins_widget #icon-label {
+NoScheduledPluginsWidget #icon-label {
     margin-top : 220px;
 }
 
@@ -1208,13 +1208,13 @@ no_scheduled_plugins_widget #icon-label {
 *          PLUGIN ARGUMENTS WIDGET           *
 *********************************************/
 
-plugin_arguments_widget {
+PluginArgumentsWidget {
     /*background: rgb(14, 16, 18);*/
     background  : rgb(199, 199, 199);
     padding-top : 7px;
 }
 
-plugin_arguments_widget QPushButton {
+PluginArgumentsWidget QPushButton {
     font-family : "Iosevka";
     font-weight : 500;
     font-size   : 14px;
@@ -1223,13 +1223,13 @@ plugin_arguments_widget QPushButton {
     border      : 1px solid black;
 }
 
-plugin_arguments_widget QPushButton:checked {
+PluginArgumentsWidget QPushButton:checked {
     color            : rgb(14, 16, 18);
     background-color : rgba(85, 255, 0, 0.6);
     border           : 1px solid black;
 }
 
-plugin_arguments_widget QLineEdit {
+PluginArgumentsWidget QLineEdit {
     font-family    : "Iosevka";
     font-weight    : 500;
     font-size      : 14px;
@@ -1245,12 +1245,12 @@ plugin_arguments_widget QLineEdit {
     border         : none;
 }
 
-plugin_arguments_widget QLineEdit:disabled {
+PluginArgumentsWidget QLineEdit:disabled {
     color      : rgb(32, 32, 32);
     background : rgb(199, 199, 199);
 }
 
-scheduled_plugin_item_area {
+ScheduledPluginItemArea {
     background : rgb(219, 219, 219);
 }
 
