--- a/resources/gui_resources.qrc
+++ b/resources/gui_resources.qrc
@@ -78,6 +78,9 @@
         <file alias="keyboard">icons/0086-keyboard.svg</file>
         <file alias="clock">icons/0079-clock.svg</file>
         <file alias="gen-window">icons/generic-window.svg</file>
+	<file alias="sel_module">icons/sel_module.png</file>
+	<file alias="sel_gate">icons/sel_gate.png</file>
+	<file alias="sel_net">icons/sel_net.png</file>
     </qresource>
     <qresource prefix="/images">
         <file alias="hal">images/hal_9000_by_johnnyslowhand.png</file>
