--- a/plugins/gui/resources/gui_resources.qrc
+++ b/plugins/gui/resources/gui_resources.qrc
@@ -78,9 +78,10 @@
         <file alias="keyboard">icons/0086-keyboard.svg</file>
         <file alias="gen-window">icons/generic-window.svg</file>
         <file alias="open-alt">icons/0383-new-tab.svg</file>
-	    <file alias="sel_module">icons/sel_module.png</file>
-	    <file alias="sel_gate">icons/sel_gate.png</file>
-	    <file alias="sel_net">icons/sel_net.png</file>
+        <file alias="sel_module">icons/sel_module.png</file>
+        <file alias="sel_gate">icons/sel_gate.png</file>
+        <file alias="sel_net">icons/sel_net.png</file>
+	<file alias="undo2">icons/0104-undo2.svg</file>
     </qresource>
     <qresource prefix="/images">
         <file alias="hal">images/hal_9000_by_johnnyslowhand.png</file>
