--- a/plugins/gui/resources/stylesheet/sunny.qss
+++ b/plugins/gui/resources/stylesheet/sunny.qss
@@ -1376,6 +1376,17 @@ qproperty-new_file_icon_style: "";
 qproperty-new_file_icon_path: ":/icons/new-file";
 }
 
+hal--GroupingManagerWidget {
+qproperty-new_grouping_icon_style: "all->#00AA00";
+qproperty-new_grouping_icon_path: ":/icons/plus";
+
+qproperty-rename_grouping_icon_style: "all->#00AA00";
+qproperty-rename_grouping_icon_path: ":/icons/pen";
+
+qproperty-delete_icon_style: "all->#00AA00";
+qproperty-delete_icon_path: ":/icons/trashcan";
+}
+
 ContextManagerWidget {
 qproperty-new_view_icon_style: "all->#00AA00";
 qproperty-new_view_icon_path: ":/icons/plus";
