--- a/plugins/gui/resources/gui_resources.qrc
+++ b/plugins/gui/resources/gui_resources.qrc
@@ -80,6 +80,7 @@
         <file alias="open-alt">icons/0383-new-tab.svg</file>
 	<file alias="color_select">icons/color_select.png</file>
 	<file alias="to_grouping">icons/to_grouping.png</file>
+	<file alias="to_module">icons/to_module.png</file>
         <file alias="sel_module">icons/sel_module.png</file>
         <file alias="sel_gate">icons/sel_gate.png</file>
         <file alias="sel_net">icons/sel_net.png</file>
