--- a/plugins/gui/resources/stylesheet/darcula.qss
+++ b/plugins/gui/resources/stylesheet/darcula.qss
@@ -321,6 +321,11 @@ min-height: 1px;
 max-height: 1px;
 }*/
 
+QHeaderView::section {
+font: "Iosevka";
+font-weight: bold;
+}
+
 hal--Toolbar {
     background : rgb(9, 11, 13);
     spacing    : 1px;
