--- a/plugins/gui/resources/gui_resources.qrc
+++ b/plugins/gui/resources/gui_resources.qrc
@@ -81,6 +81,7 @@
 	<file alias="color_select">icons/color_select.png</file>
 	<file alias="to_grouping">icons/to_grouping.png</file>
 	<file alias="to_module">icons/to_module.png</file>
+	<file alias="to_selection">icons/to_selection.png</file>
         <file alias="sel_module">icons/sel_module.png</file>
         <file alias="sel_gate">icons/sel_gate.png</file>
         <file alias="sel_net">icons/sel_net.png</file>
